backend/internal/architecture/testdata/invalid/internal/modules/bad/internal/postgres/article_record.go
package postgres

type articleRecord struct{}
